# ClipFlow

./: .gitignore  AI-CONTEXT.md  README.md  REQUIREMENTS.md  TEST_REPORT.md  create-icon.cjs  icon-preview.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.qwen/reviews/: 2026-04-13-205000-clipflow-review.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mouse_monitor.rs
src-tauri/src/clipboard/: listener.rs  mod.rs  parser.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/storage/: cache.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/components/: ClipboardCard.test.tsx  ClipboardCard.tsx  DockPanel.tsx  Icons.tsx  ImageGrid.test.tsx  ImageGrid.tsx  SearchBar.test.tsx  SearchBar.tsx  Settings.test.tsx  Settings.tsx  TextList.tsx
src/styles/: globals.css
src/utils/: formatTime.test.ts  formatTime.ts
